kube/datalake/datalake-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datalake
  name: datalake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datalake
  template:
    metadata:
      labels:
        app: datalake
    spec:
      containers:
        - image: hardcoreeng/datalake:s0.7.204
          name: datalake
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512M"
      restartPolicy: Always
