kube/datalake/datalake-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: datalake
  name: datalake
spec:
  ingressClassName: nginx
  rules:
    - host: datalake.huly.example
      http:
        paths:
          - backend:
              service:
                name: datalake
                port:
                  number: 80
            path: /
            pathType: Prefix
